Fix z-index section 3

--- a/sass/partials/_desktop.scss
+++ b/sass/partials/_desktop.scss
@@ -105,6 +105,7 @@
     }
     div {
       flex-basis: 50%;
+      padding: 2rem;
     }
   }
 
@@ -113,8 +114,11 @@
     padding: 0px 15vw;
     margin-top: -10vh;
     margin-bottom: 5vh;
+    
+
     div {
       flex-basis: 50%;
+
       img {
         margin-top: 0;
       }
