--- a/sass/partials/_main.scss
+++ b/sass/partials/_main.scss
@@ -54,8 +54,9 @@
   margin-top: -10vh;
 }
 
-#nosotros > div {
+#nosotros {
   z-index: 1;
+  position: relative;
 }
 
 .m-0 {
